--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.0-rc02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
-    implementation 'commons-codec:commons-codec:1.11'
+    implementation 'commons-codec:commons-codec:1.9'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    implementation 'androidx.cardview:cardview:1.0.0-beta01'
 }
