--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,10 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'commons-codec:commons-codec:1.9'
     implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
+    implementation 'com.android.support:recyclerview-v7:28.3.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'androidx.cardview:cardview:1.0.0-beta01'
+    implementation 'com.android.support:recyclerview-v7:28.1'
 }
