--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'androidx.cardview:cardview:1.0.0-beta01'
     implementation 'com.android.support:recyclerview-v7:28.1'
+    implementation 'com.google.android.material:material:1.0.0'
 }
