--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0-beta01'
     implementation 'com.android.support:recyclerview-v7:28.1'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.android.support:percent:28.0.0'
 }
