--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-    >
+            android:theme="@style/AppTheme">
+        <activity android:name=".RecordOnRepair">
+        </activity>
         <activity android:name=".WorkerActivity">
         </activity>
         <activity android:name=".MainActivity">
