--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         </activity>
         <activity android:name=".WorkerActivity">
         </activity>
+        <activity android:name=".fragments.RecordAddDialog">
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
