add admin page and users list. add user deleting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".AdminUserList">
+        </activity>
+        <activity android:name=".AdminActivity">
+        </activity>
         <activity android:name=".RecordOnRepair">
         </activity>
         <activity android:name=".WorkerActivity">
