finished salary add block

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".AdminSalaryList">
+        </activity>
         <activity android:name=".AdminUserList">
         </activity>
         <activity android:name=".AdminActivity">
@@ -19,6 +21,8 @@
         <activity android:name=".WorkerActivity">
         </activity>
         <activity android:name=".fragments.RecordAddDialog">
+        </activity>
+        <activity android:name=".fragments.SalaryAddDialog">
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
