--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".AdminOrdersList">
+        </activity>
         <activity android:name=".AdminSalaryList">
         </activity>
         <activity android:name=".AdminUserList">
