--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     implementation 'commons-codec:commons-codec:1.9'
     implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
     implementation 'com.android.support:recyclerview-v7:28.3.1'
-    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-firestore:17.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
